src/objects/Product_Category__c.object
<CustomObject>
    <description>Contains the main product categories and their related information to be displayed on the product viewer page, and some extra configurations used for browsing products and rate plans.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determine whether the product is active to be displayed to the front-end website</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <description>URL of the application</description>
        <inlineHelpText>URL of the application</inlineHelpText>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Window__c</fullName>
        <description>Number of days allowed before end of subscription to change the Auto-Renew flag</description>
        <inlineHelpText>Number of days allowed before end of subscription to change the Auto-Renew flag</inlineHelpText>
        <label>Auto Renewal Window</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banner_Image_Small__c</fullName>
        <label>Banner Image Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Banner_Image__c</fullName>
        <description>Image used in Product Viewer page</description>
        <label>Banner Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Button_Type__c</fullName>
        <inlineHelpText>Determines whether to show the buttons on the sections as &quot;Buy now&quot; or as &quot;Get a Quote&quot;</inlineHelpText>
        <label>Button Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy Now</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Get a Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>Display name (ex: Global System Solutions) that will be used in the product landing page as the display name at the top of the page.</inlineHelpText>
        <label>Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_1_Description__c</fullName>
        <inlineHelpText>Description used to describe feature #1</inlineHelpText>
        <label>Feature 1 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feature_1_Image__c</fullName>
        <inlineHelpText>Image used to be displayed beside the feature #1 description.</inlineHelpText>
        <label>Feature 1 - Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feature_2_Description__c</fullName>
        <inlineHelpText>Description used to describe feature #2</inlineHelpText>
        <label>Feature 2 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feature_2_Image__c</fullName>
        <inlineHelpText>Image used to be displayed beside the feature #2 description.</inlineHelpText>
        <label>Feature 2 - Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feature_3_Description__c</fullName>
        <inlineHelpText>Description used to describe feature #3</inlineHelpText>
        <label>Feature 3 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feature_3_Image__c</fullName>
        <inlineHelpText>Image used to be displayed beside the feature #3 description.</inlineHelpText>
        <label>Feature 3 - Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Quantifiable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if Product Category associated Rate Plans are quantifiable or not</inlineHelpText>
        <label>Is Quantifiable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <inlineHelpText>Description that will be used to describe the selected products and will be displayed below the banner.</inlineHelpText>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <description>Grouping of the product category. These 3 features are displayed on the home page</description>
        <label>Product Feature</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Icon__c</fullName>
        <label>Product Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recommended_Product_Category_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product 1</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Product_Category_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product 2</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Product Categories (Recommended Product Category 2)</relationshipLabel>
        <relationshipName>Product_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Window__c</fullName>
        <inlineHelpText>Number of days allowed for the renewal window</inlineHelpText>
        <label>Renewal Window</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_1_Description__c</fullName>
        <label>Resource 1 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_1_File__c</fullName>
        <inlineHelpText>Resource 1 File link</inlineHelpText>
        <label>Resource 1 - File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resource_2_Description__c</fullName>
        <inlineHelpText>Resource 2  Description</inlineHelpText>
        <label>Resource 2 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_2_File__c</fullName>
        <inlineHelpText>Resource 2  File</inlineHelpText>
        <label>Resource 2 - File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resource_3_Description__c</fullName>
        <inlineHelpText>Resource 3  Description</inlineHelpText>
        <label>Resource 3 - Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_3_File__c</fullName>
        <inlineHelpText>Resource 3  File</inlineHelpText>
        <label>Resource 3 - File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resources_Main_Text__c</fullName>
        <label>Resources - Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_1_Show__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Show/Hide Section #1</inlineHelpText>
        <label>Section 1: Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_2_Description__c</fullName>
        <description>A generic RTF description and contents</description>
        <label>Section 2: Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_2_Name__c</fullName>
        <inlineHelpText>The name to be displayed on section #2</inlineHelpText>
        <label>Section 2: Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_2_Show__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Show/Hide Section #2</inlineHelpText>
        <label>Section 2: Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_3_Description__c</fullName>
        <description>Generic RTF contents</description>
        <label>Section 3: Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_3_Name__c</fullName>
        <inlineHelpText>The name to be displayed on section #3</inlineHelpText>
        <label>Section 3: Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_3_Show__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Show/Hide Section #3</inlineHelpText>
        <label>Section 3: Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_5_Description__c</fullName>
        <description>Generic RTF contents</description>
        <label>Section 5: Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_5_Name__c</fullName>
        <inlineHelpText>The name to be displayed on section #5</inlineHelpText>
        <label>Section 5: Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>Short description can be used at the top of the page under the product display name.</inlineHelpText>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_price_on_eCommerce__c</fullName>
        <label>Show price on eCommerce?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No - Validation Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_available_for_this_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial available for this Product?</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Category Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>